LFHCDESK-50: Few changes to forms and messages 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-reg.html

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -197,8 +197,8 @@ ${project.parent.artifactId}.homecare-pre-assessment.legend.family-comments=Fami
 
 ${project.parent.artifactId}.homecare-pre-assessment.section.primary-health-care=Primary health care
 ${project.parent.artifactId}.homecare-pre-assessment.legend.provider=Who is the primary health care provider for the family?
-${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-center=Nearest Health Care Centre
-${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-hospital=Nearest District Hospital
+${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-center=Distance to nearest Health Care centre
+${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-hospital=Distance to nearest District hospital
 ${project.parent.artifactId}.homecare-pre-assessment.legend.insurance=Health insurance
 ${project.parent.artifactId}.homecare-pre-assessment.legend.go-to-health-center=Does the family go to health centre
 ${project.parent.artifactId}.homecare-pre-assessment.legend.phc-comments=PHC comments
