LFHCDESK-50: Adding more i18n messages 	modified:   api/src/main/resources/messages.properties

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -239,3 +239,73 @@ ${project.parent.artifactId}.homecare-pre-assessment.legend.cultural-beliefs=Cul
 ${project.parent.artifactId}.homecare-pre-assessment.legend.others-comments=Other comments
 
 
+${project.parent.artifactId}.financial-assessment.section.family=Family situation
+${project.parent.artifactId}.financial-assessment.legend.interviewee=Name of Interviewee
+${project.parent.artifactId}.financial-assessment.legend.gender=Gender
+${project.parent.artifactId}.financial-assessment.legend.age=Age
+${project.parent.artifactId}.financial-assessment.legend.relationship=Relationship
+${project.parent.artifactId}.financial-assessment.legend.occupation=Occupation
+${project.parent.artifactId}.financial-assessment.legend.family-member-details=Family Member details
+${project.parent.artifactId}.financial-assessment.legend.family-member-name=Name of Family Member
+${project.parent.artifactId}.financial-assessment.legend.family-dob=Date of Birth of Family Member
+${project.parent.artifactId}.financial-assessment.legend.health-status=Health status
+${project.parent.artifactId}.financial-assessment.legend.education-level=Current education level
+${project.parent.artifactId}.financial-assessment.legend.emplyed-outside-home=Employed outside home?
+${project.parent.artifactId}.financial-assessment.legend.job-type=Job type
+${project.parent.artifactId}.financial-assessment.legend.family-income=Income (average monthly)
+
+${project.parent.artifactId}.financial-assessment.section.living-conditions=Living conditions
+${project.parent.artifactId}.financial-assessment.legend.hef=Health Equity Fund
+${project.parent.artifactId}.financial-assessment.legend.family=Gender
+${project.parent.artifactId}.financial-assessment.legend.children=Children 0-14
+${project.parent.artifactId}.financial-assessment.legend.adults=Adults (20 years and older)
+${project.parent.artifactId}.financial-assessment.legend.number-of-person=Number of person in Household
+${project.parent.artifactId}.financial-assessment.legend.gender-of-head=Gender of Head of household
+${project.parent.artifactId}.financial-assessment.legend.literacy-level-of-head=Literacy Level of Head of Household
+${project.parent.artifactId}.financial-assessment.legend.housing=Housing
+${project.parent.artifactId}.financial-assessment.legend.rapid-assessment=Rapid Visual assessment
+${project.parent.artifactId}.financial-assessment.legend.roof=Roof
+${project.parent.artifactId}.financial-assessment.legend.wall=Wall
+${project.parent.artifactId}.financial-assessment.legend.size=Size
+${project.parent.artifactId}.financial-assessment.legend.floor=Floor
+${project.parent.artifactId}.financial-assessment.legend.toilet=Toilet
+${project.parent.artifactId}.financial-assessment.legend.energy-for-cooking=Energy for Cooking
+${project.parent.artifactId}.financial-assessment.legend.water-source=Water Source
+${project.parent.artifactId}.financial-assessment.legend.transports=Means of Transportation
+${project.parent.artifactId}.financial-assessment.legend.electricity=Electrical Energy
+${project.parent.artifactId}.financial-assessment.legend.electroncis=Electronics
+${project.parent.artifactId}.financial-assessment.legend.animals=Animals
+${project.parent.artifactId}.financial-assessment.legend.agricultural-material=Agricultural materials
+${project.parent.artifactId}.financial-assessment.legend.land=Land
+${project.parent.artifactId}.financial-assessment.legend.plant-cereals=Plant cereals
+${project.parent.artifactId}.financial-assessment.legend.cash-income=Cash Income/year
+${project.parent.artifactId}.financial-assessment.legend.own-shop=Own a shop
+${project.parent.artifactId}.financial-assessment.legend.debt=Debt
+${project.parent.artifactId}.financial-assessment.legend.living-conditions-score=Living Conditions Score
+
+${project.parent.artifactId}.financial-assessment.section.financial-conditions=Financial Condition
+${project.parent.artifactId}.financial-assessment.legend.debt=Other Social support systems
+${project.parent.artifactId}.financial-assessment.legend.additional-supports=Additional financial supports
+${project.parent.artifactId}.financial-assessment.legend.type-of-insurance=Type of Health Insurance
+${project.parent.artifactId}.financial-assessment.legend.income=Income per month
+${project.parent.artifactId}.financial-assessment.legend.montly-cash-earnings=Family monthly cash earnings
+${project.parent.artifactId}.financial-assessment.legend.external-support=External support
+${project.parent.artifactId}.financial-assessment.legend.financial-needs-covered=Is this money enough to meet the needs of the family?
+${project.parent.artifactId}.financial-assessment.legend.expenses=Expenses per month
+${project.parent.artifactId}.financial-assessment.legend.expenses-average=Average Expense
+${project.parent.artifactId}.financial-assessment.legend.paying-loan=Paying for loan
+${project.parent.artifactId}.financial-assessment.legend.debts=Debts
+${project.parent.artifactId}.financial-assessment.legend.debts-amount=How much?
+${project.parent.artifactId}.financial-assessment.legend.debts-reason=Reason for debt
+${project.parent.artifactId}.financial-assessment.legend.spent-for-teatment=Money spent for health treatment so far?
+${project.parent.artifactId}.financial-assessment.legend.food-needs-covered=Does the family have enough food?
+${project.parent.artifactId}.financial-assessment.legend.transports-cost=Cost of Transport to LFHC
+${project.parent.artifactId}.financial-assessment.legend.transport-by=Transportation by
+${project.parent.artifactId}.financial-assessment.legend.poverty-level-compared=The family is poorer than others in the same area?
+${project.parent.artifactId}.financial-assessment.legend.financial-situation=Financial situation?
+${project.parent.artifactId}.financial-assessment.legend.other-comments=Other comments
+${project.parent.artifactId}.financial-assessment.legend.lfhc-provide=LFHC will provide:
+${project.parent.artifactId}.financial-assessment.legend.other-support-provided=Other support provided
+${project.parent.artifactId}.financial-assessment.legend.amount-to-porvide=Amount to be provided
+${project.parent.artifactId}.financial-assessment.legend.next-review-date=Next review will be:
+${project.parent.artifactId}.financial-assessment.legend.no-support-reason=LFHC will not provide the support because:
