LFHCDESK-50: Few changes on the Financial Assessment form

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -276,7 +276,7 @@ ${project.parent.artifactId}.financial-assessment.legend.energy-for-cooking=Ener
 ${project.parent.artifactId}.financial-assessment.legend.water-source=Water Source
 ${project.parent.artifactId}.financial-assessment.legend.transports=Means of Transportation
 ${project.parent.artifactId}.financial-assessment.legend.electricity=Electrical Energy
-${project.parent.artifactId}.financial-assessment.legend.electroncis=Electronics
+${project.parent.artifactId}.financial-assessment.legend.electronics=Electronics
 ${project.parent.artifactId}.financial-assessment.legend.animals=Animals
 ${project.parent.artifactId}.financial-assessment.legend.agricultural-material=Agricultural materials
 ${project.parent.artifactId}.financial-assessment.legend.land=Land
@@ -289,7 +289,7 @@ ${project.parent.artifactId}.financial-assessment.legend.living-conditions-score
 ${project.parent.artifactId}.financial-assessment.section.financial-conditions=Financial Condition
 ${project.parent.artifactId}.financial-assessment.legend.other-social-supports=Other Social support systems
 ${project.parent.artifactId}.financial-assessment.legend.additional-financial-supports=Additional financial supports
-${project.parent.artifactId}.financial-assessment.legend.health-insurance=Health
+${project.parent.artifactId}.financial-assessment.legend.health-insurance=Health Insurance
 ${project.parent.artifactId}.financial-assessment.legend.type-of-insurance=Type of Health Insurance
 ${project.parent.artifactId}.financial-assessment.legend.income=Income per month
 ${project.parent.artifactId}.financial-assessment.legend.montly-cash-earnings=Family monthly cash earnings
@@ -303,7 +303,7 @@ ${project.parent.artifactId}.financial-assessment.legend.debts-amount=How much?
 ${project.parent.artifactId}.financial-assessment.legend.debts-reason=Reason for debt
 ${project.parent.artifactId}.financial-assessment.legend.spent-for-teatment=Money spent for health treatment so far?
 ${project.parent.artifactId}.financial-assessment.legend.food-needs-covered=Does the family have enough food?
-${project.parent.artifactId}.financial-assessment.legend.transports-details=Transport to LFHC²
+${project.parent.artifactId}.financial-assessment.legend.transports-details=Transport to LFHC
 ${project.parent.artifactId}.financial-assessment.legend.transports-cost=Cost of Transport to LFHC
 ${project.parent.artifactId}.financial-assessment.legend.transport-by=Transportation by
 ${project.parent.artifactId}.financial-assessment.legend.poverty-level-compared=The family is poorer than others in the same area?
