LFHCDESK-50: Changes to Outreach forms following feedback from Cheri 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-pre-assessment.html 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-reg.html

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -165,9 +165,11 @@ ${project.parent.artifactId}.homecare-pre-assessment.legend.intervention=Need in
 
 ${project.parent.artifactId}.homecare-pre-assessment.section.nutrition=Nutrition
 ${project.parent.artifactId}.homecare-pre-assessment.legend.diet=Is the patient on a full diet for age?
+${project.parent.artifactId}.homecare-pre-assessment.legend.infant-feeding-method=Infant feeding method
 ${project.parent.artifactId}.homecare-pre-assessment.legend.rice=Rice
 ${project.parent.artifactId}.homecare-pre-assessment.legend.meat=Meat
 ${project.parent.artifactId}.homecare-pre-assessment.legend.fish=Fish
+${project.parent.artifactId}.homecare-pre-assessment.legend.eggs=Eggs
 ${project.parent.artifactId}.homecare-pre-assessment.legend.vegetables=Vegetables
 ${project.parent.artifactId}.homecare-pre-assessment.legend.fruits=Fruits
 ${project.parent.artifactId}.homecare-pre-assessment.legend.preference=Preference
@@ -196,7 +198,9 @@ ${project.parent.artifactId}.homecare-pre-assessment.legend.nighttime-care-giver
 ${project.parent.artifactId}.homecare-pre-assessment.legend.family-comments=Family situation comments
 
 ${project.parent.artifactId}.homecare-pre-assessment.section.primary-health-care=Primary health care
-${project.parent.artifactId}.homecare-pre-assessment.legend.provider=Who is the primary health care provider for the family?
+${project.parent.artifactId}.homecare-pre-assessment.legend.primary-provider=Primary health care provider
+${project.parent.artifactId}.homecare-pre-assessment.legend.primary-provider-name=Primary health care provider name
+${project.parent.artifactId}.homecare-pre-assessment.legend.primary-provider-number=Primary health care provider number
 ${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-center=Distance to nearest Health Care centre
 ${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-hospital=Distance to nearest District hospital
 ${project.parent.artifactId}.homecare-pre-assessment.legend.insurance=Health insurance
