LFHCDESK-50: More changes following feedback from client

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -129,7 +129,8 @@ ${project.parent.artifactId}.homecare-regular-visit.legend.cardiovascular=Cardio
 ${project.parent.artifactId}.homecare-regular-visit.legend.digestive=Digestive
 ${project.parent.artifactId}.homecare-regular-visit.legend.other=Other
 ${project.parent.artifactId}.homecare-regular-visit.section.medication=Medication
-${project.parent.artifactId}.homecare-regular-visit.legend.hiv-tb-until=HIV/TB drug
+${project.parent.artifactId}.homecare-regular-visit.legend.hiv-until=HIV drug available until
+${project.parent.artifactId}.homecare-regular-visit.legend.tb-until=TB drug available until
 ${project.parent.artifactId}.homecare-regular-visit.section.nutrition=Nutrition
 ${project.parent.artifactId}.homecare-regular-visit.section.psycho-socio-financial-assessment=Psychological/socio-financial assessment
 ${project.parent.artifactId}.homecare-regular-visit.section.nursing-implementation=Nursing implementation
@@ -289,6 +290,10 @@ ${project.parent.artifactId}.financial-assessment.legend.cash-income=Cash Income
 ${project.parent.artifactId}.financial-assessment.legend.own-shop=Own a shop
 ${project.parent.artifactId}.financial-assessment.legend.debt=Debt
 ${project.parent.artifactId}.financial-assessment.legend.living-conditions-score=Living Conditions Score
+${project.parent.artifactId}.financial-assessment.legend.living-conditions-score-upper=LIVING CONDITIONS SCORE
+${project.parent.artifactId}.financial-assessment.lcs-very-low=Any family with a score less than 22 (out of total 65) is considered to be very poor
+${project.parent.artifactId}.financial-assessment.lcs-not-complete=Living Conditions score is not calculated. Please answer to all the questions in the Living Conditions section
+
 
 ${project.parent.artifactId}.financial-assessment.section.financial-conditions=Financial Condition
 ${project.parent.artifactId}.financial-assessment.legend.other-social-supports=Other Social support systems
