LFHCDESK-50: Modifications on outreach forms messages
	modified:   api/src/main/resources/messages.properties

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -180,7 +180,7 @@ ${project.parent.artifactId}.homecare-pre-assessment.legend.cook=Who cooks for t
 ${project.parent.artifactId}.homecare-pre-assessment.legend.nutrition-comments=Nutrition comments
 
 ${project.parent.artifactId}.homecare-pre-assessment.section.hygiene=Hygiene
-${project.parent.artifactId}.homecare-pre-assessment.legend.water-primary=Primary source of water
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-source=Source of water
 ${project.parent.artifactId}.homecare-pre-assessment.legend.water-nampapa=Nam papa (home plumbing)
 ${project.parent.artifactId}.homecare-pre-assessment.legend.water-well=Water Well
 ${project.parent.artifactId}.homecare-pre-assessment.legend.water-well-type=What type of well?
@@ -243,6 +243,9 @@ ${project.parent.artifactId}.homecare-pre-assessment.legend.government-financial
 ${project.parent.artifactId}.homecare-pre-assessment.legend.cultural-beliefs=Cultural beliefs
 ${project.parent.artifactId}.homecare-pre-assessment.legend.others-comments=Other comments
 
+${project.parent.artifactId}.homecare-pre-assessment.section.map-house=Map of house
+${project.parent.artifactId}.homecare-pre-assessment.legend.map-house=Map of house
+${project.parent.artifactId}.homecare-pre-assessment.map-link=Link of the patient's house map
 
 ${project.parent.artifactId}.financial-assessment.section.family=Family situation
 ${project.parent.artifactId}.financial-assessment.legend.interviewee=Name of Interviewee
