LFHCDESK-159: Add i18n messages and rename the directive to 'clickToEditObs'

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -326,3 +326,11 @@ ${project.parent.artifactId}.financial-assessment.legend.other-support-provided=
 ${project.parent.artifactId}.financial-assessment.legend.amount-to-provide=Amount to be provided
 ${project.parent.artifactId}.financial-assessment.legend.next-review-date=Next review will be:
 ${project.parent.artifactId}.financial-assessment.legend.no-support-reason=LFHC will not provide the support because:
+
+${project.parent.artifactId}.clickToEditObs.empty=Add a note
+${project.parent.artifactId}.clickToEditObs.saveError=There was a problem saving the patient note
+${project.parent.artifactId}.clickToEditObs.loadError=There was a problem loading the patient note
+${project.parent.artifactId}.clickToEditObs.deleteError=There was a problem deleting the patient note
+${project.parent.artifactId}.clickToEditObs.saveSuccess=Patient note successfully saved
+${project.parent.artifactId}.clickToEditObs.deleteSuccess=Patient note successfully deleted
+ 
